# wingman

./: .gitignore  .mcp.json  Justfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: marvin.agent.md  yoda.agent.md
.github/instructions/: python.instructions.md
.github/prompts/: plan.prompt.md  review.prompt.md
.github/prompts/python/: fix-lint.prompt.md
.wingman/: skills.toml
docs/: mcp.md
docs/decisions/: 0001-use-postgres-over-mongodb.md
instructions/: base.md  python.md
prompts/: review.prompt.md
prompts/python/: add-types.prompt.md
recipes/: ci-check.yaml
src/wingman/: __init__.py  audit.py  catalog.py  check.py  cli.py  core.py  docs.py  opencode.py  review.py  skills.py  sync.py
src/wingman/data/catalog/agents/: gilfoyle.agent.md  skill-reviewer.agent.md
src/wingman/data/checks/: python.toml
src/wingman/data/mcp/: catalog.toml  python.json
src/wingman/data/skills/: index.toml
src/wingman/data/templates/agile/: bug.md
src/wingman/data/templates/decisions/: adr.md
templates/: python-pyproject.toml
templates/agile/: epic.md  spike.md  story.md
templates/decisions/: adr.md
templates/engineering/: post-mortem.md  runbook.md
tests/: conftest.py  test_audit.py  test_catalog.py  test_check.py  test_cli.py  test_core.py  test_opencode.py  test_skills.py
