[project]
name = "wingman"
version = "0.1.0"
description = "Agent superpowers for any project — stack-aware setup for Copilot, Claude Code, Cursor, Goose, and opencode."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
wingman = "wingman.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wingman"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
