[project]
name = "wingman"
version = "0.1.0"
description = "A GitHub Copilot guardrail toolkit: install instructions, MCP config, and skills, and run a check gate."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
]

[project.scripts]
wingman = "wingman.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wingman"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
